--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 
 @font-face {
     font-family: "main";
-    src: url("font/main.otf");
+    src: url("./font/main.otf");
 }
 #usernameInput {
     width: 300px;
