--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,7 +5,7 @@
 body {
     font-family: "main";
     color: white;
-    background-image: url("./img/hub2.png");
+    background-image: url("/public/img/hub2.png");
 }
 
 @font-face {
