--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,10 +5,6 @@
 body {
     font-family: "main";
     color: white;
-    background-image: url("/public/img/hub2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    backdrop-filter: blur(10px);
 }
 
 @font-face {
@@ -35,7 +31,7 @@ body {
     height: 128px;
 }
 
-.imgbox {
+.bbox {
     display: grid;
     height: 100%;
 }
@@ -48,7 +44,4 @@ body {
 .container {
     position: fixed;
     padding: 20px;
-    width: 100vw;
-    height: 100vh;
-    backdrop-filter: blur(10px);
 }
