--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -5,6 +5,10 @@
 body {
     font-family: "main";
     color: white;
+    background-image: url("/public/img/hub2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(10px);
 }
 
 @font-face {
