--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -8,7 +8,7 @@ body {
     background-image: url("/public/img/hub2.png");
     background-repeat: no-repeat;
     background-size: cover;
-    backdrop-filter: blur(10px);
+    filter: blur(10px);
 }
 
 @font-face {
