--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -34,11 +34,15 @@ body {
 .bbox {
     display: grid;
     height: 100%;
+    filter: blur(10px);
 }
 #background {
     max-width: 100%;
     max-height: 100vh;
     margin: auto;
+    background-image: url("/public/img/hub2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
