--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -11,7 +11,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('your-image.jpg'); /* Replace with your image */
+    background-image: url('/public/img/hub2.png'); /* Replace with your image */
     background-size: cover; /* Cover the entire area */
     background-position: center; /* Center the image */
     filter: blur(8px); /* Blur effect */
