--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -9,12 +9,14 @@ body {
     position: fixed; /* Fixed position to cover the entire viewport */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 110%; /* Adjusted width to 110% */
+    height: 110%; /* Adjusted height to 110% */
     background-image: url('/public/img/hub2.png'); /* Replace with your image */
     background-size: cover; /* Cover the entire area */
     background-position: center; /* Center the image */
     filter: blur(8px); /* Blur effect */
+    margin-left: -5%; /* Negative margin to adjust position */
+    margin-top: -5%; /* Negative margin to adjust position */
     z-index: -1; /* Send behind other content */
 }
 
