--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -49,36 +49,9 @@ button {
     color: white;
     cursor: pointer;
     background: #757575;
-    padding: 20px;
-    box-shadow:
-    /* Right & bottom */
-    4px 0 #555,
-    6px 0 black,
-    0 4px #555,
-    0 6px black,
-    /* Left & top */
-    -4px 0 white,
-    -6px 0 black,
-    0 -4px white,
-    0 -6px black,
-    /* Corner right bottom */
-    4px 2px #555,
-    2px 4px #555,
-    2px 6px black,
-    6px 2px black,
-    4px 4px black,
-    /* Corner top right */
-    2px -2px #C6C6C6,
-    4px -2px black,
-    2px -4px black,
-    /* Corner top left */
-    -4px -2px white,
-    -2px -4px white,
-    -2px -6px black,
-    -6px -2px black,
-    -4px -4px black,
-    /* Corner bottom left */
-    -2px 2px #C6C6C6,
-    -4px 2px black,
-    -2px 4px black;
+    padding: 10px;
+    box-shadow: 
+        -4px -4px 0px 4px rgba(198,198,198,1),
+        0px 0px 0px 8px rgba(198,198,198,1),
+        0px 0px 0px 16px rgba(0,0,0,0);
 }
