--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -50,9 +50,9 @@ button {
     cursor: pointer;
     background: #757575;
     padding: 10px;
-    box-shadow: 0px 0px 0px 18px rgba(0,0,0,1);
-    border-right: 4px #757575;
-    border-bottom: 4px #757575;
-    border-top: 4px #c6c6c6;
-    border-left: 4px #c6c6c6;
+    box-shadow: 0px 0px 0px 8px rgba(0,0,0,1);
+    border-top: 4px solid #c6c6c6;
+    border-right: 4px solid #757575;
+    border-bottom: 4px solid #757575;
+    border-left: 4px solid #c6c6c6;
 }
