--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -50,6 +50,7 @@ button {
     cursor: pointer;
     background: #757575;
     padding: 10px;
+    margin: auto;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,1);
     border-top: 2px solid #c6c6c6;
     border-right: 2px solid #757575;
