--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -34,11 +34,16 @@ body {
 }
 #usernameInput {
     width: 300px;
-    padding: 10px;
-    margin: 10px;
     font-family: "main";
     color: white;
-    background: #050555;
+    background: #757575;
+    padding: 10px;
+    margin: auto;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,1);
+    border-top: 2px solid #c6c6c6;
+    border-right: 2px solid #757575;
+    border-bottom: 2px solid #757575;
+    border-left: 2px solid #c6c6c6;
 }
 
 #result {
