--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -32,7 +32,7 @@ body {
     font-family: "main";
     src: url("./font/main.otf");
 }
-#usernameInput {
+#username {
     width: 300px;
     font-family: "main";
     color: white;
