--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -44,6 +44,7 @@ body {
     border-right: 2px solid #757575;
     border-bottom: 2px solid #757575;
     border-left: 2px solid #c6c6c6;
+    outline: none;
 }
 
 #result {
