--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -62,6 +62,18 @@ button {
     border-bottom: 2px solid #757575;
     border-left: 2px solid #c6c6c6;
 }
+select {
+    font-family: "main";
+    color: white;
+    background: #757575;
+    padding: 10px;
+    margin: auto;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,1);
+    border-top: 2px solid #c6c6c6;
+    border-right: 2px solid #757575;
+    border-bottom: 2px solid #757575;
+    border-left: 2px solid #c6c6c6;
+}
 button:hover {
     box-shadow: 0px 0px 0px 2px rgba(255,255,255,1);
 }
