--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -32,6 +32,7 @@ body {
     color: white; /* Text color for better visibility */
     text-align: center;
     padding: 20px;
+    background-color: #33333388;
 }
 
 @font-face {
