--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -9,7 +9,7 @@ body {
     height: 100vh;
     font-family: "main";
     color: white;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .background-blur {
