--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -85,3 +85,52 @@ select {
 button:hover {
     box-shadow: 0px 0px 0px 2px rgba(255,255,255,1);
 }
+
+.black {
+    color: #000000;
+}
+.darkblue {
+  	color: #0000AA;
+}
+.darkgreen {
+    color: #00AA00;
+}
+.darkaqua {
+    color: #00AAAA;
+}
+.darkred {
+    color: #AA0000;
+}
+.darkpurple {
+    color: #AA00AA;
+}
+.gold {
+    color: #FFAA00;
+}
+.gray {
+    color: 	#AAAAAA;
+}
+.darkgray {
+    color: #555555;
+}
+.blue {
+  	color: #5555FF;
+}
+.green {
+    color: #55FF55;
+}
+.aqua {
+    color: #55FFFF;
+}
+.red {
+    color: #FF5555;
+}
+.purple {
+    color: #FF55FF;
+}
+.yellow {
+    color: #FFFF55;
+}
+.white {
+    color: 	#FFFFFF;
+}
