--- a/public/CSS/gui.css
+++ b/public/CSS/gui.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px;
+    padding: 20px;
 }
 .guiContainer {
     display: flex;
