--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -164,3 +164,19 @@ button:hover {
         /* Corner bottom left */
         -2px 2px black;
 }
+.inventory-slot {
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+    border-left: 2px inset #333333;
+    border-top: 2px inset #333333;
+    background-color:#888;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 46px;
+    height: 46px;
+}
+.inventory-slot:hover {
+    background-color: #e0e0e0;
+}
