--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -171,8 +171,7 @@ button:hover {
     border-top: 2px inset #333333;
     background-color:#888;
     cursor: pointer;
-    align-self: center;
-    justify-content: center;
+    justify-self: center;
     align-items: center;
     width: 46px;
     height: 46px;
