--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -171,9 +171,9 @@ button:hover {
     border-top: 2px inset #333333;
     background-color:#888;
     cursor: pointer;
-    display: flex;
     justify-self: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     width: 46px;
     height: 46px;
 }
