--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -174,6 +174,8 @@ button:hover {
     justify-self: center;
     display: grid;
     place-items: center;
+    align-items: center;
+    justify-content: center;
     width: 46px;
     height: 46px;
 }
