--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -173,6 +173,7 @@ button:hover {
     cursor: pointer;
     justify-self: center;
     display: grid;
+    position: relative;
     place-items: center;
     align-items: center;
     justify-content: center;
